<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".CagaJugadores">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:inputType="textShortMessage" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/tarjeta" />

    <EditText
        android:id="@+id/idTarjeta"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="Dinero Inicial" />

    <EditText
        android:id="@+id/dineroTxt"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:inputType="number"
        android:text="$" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/perfil" />

    <Spinner
        android:id="@+id/spinImg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />


</LinearLayout>